    recalculation of Maxhitpoints/Maxmana/Maxstamina.
  - Added a warning in the console if translation file could not be found.
  - Fixed monsters not attacking players pets.
  - Fixed bug #0000363. (Pets don't attack a target if it's already fighting)
  - Added support for value="" in many simple definition tags.
    Examples: <mintaming value="555" /> <controlslots value="3" />
 * Definition Changes:
  - Added the mage AI to most creatures.
  - Adjusted carving sheeps.
  - Fixed leatherworkers and tanners not buying leather and hides.
  - Male NPCs now have a 75% chance of getting a beard when created.
  - Made shrink potions craftable.
  - Changed the color of shrink potions.
  - Added Tokuno includes for regions and spawnregions.
  - Removed the "Pink Spawn" from decoration.
  - Fixed skeletal steeds stats and skills.
  - Added stackable burned food that is used when cooking fails.
  - Added ranged weapons + ammo to orc scout, ratmen archer, meer captain and juka lord.
  - Added colored samurai armor.
  - Reorganized base armor categories.
  - New folder for defines: definitions/defines/
  - Applied the index.xml branches to colored armor.
  - Added lightsources to fire elementals, wisps and horde minions.
  - Added bones to bone_magi and body parts to horde minions, zombies and others.
  - Added colored weapons. Note: Only the metalic weapons.
  - Sorted out the samurai weapons by type and fixed properties.
  - Ranged weapons set to 10 instead of 12.
  - Price fixes for arrows/bolts.
  - Fixed potion kegs.
 * Python Script Changes:
  - Fixed bug #0000369. (Equip possible although item.movable = 3)
  - Fixed bug #0000361. (Pets don't follow trough gate)
  - Added xoffset, yoffset and zoffset to socket.attachmultitarget. (housing.deed)
  - Fixed a runebook bug. (Refuses to work when full)
  - Rewrote parts of the runebook.
  - Added support for creature based poison immunity.
  - Added support for hit based poisoning.
  - Fixed several bugs in lumberjacking.